Fix font preload warnings, fix blockquotes, improve footer layout on small screens, hide content above the navbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,8 @@
 :root {
+    --navbar-height: 64px;
+
+    --radius-small: 8px;
+    --radius-regular: 16px;
     --radius-large: 24px;
     --radius-full: 1000px;
     --spacing-regular: 12px;
@@ -121,10 +125,6 @@ h6 {
     letter-spacing: 0.03125rem;
 }
 
-em {
-    font-weight: bold;
-}
-
 code, pre {
     background-color: var(--surface-variant);
     color: var(--on-surface-variant);
@@ -155,7 +155,11 @@ var {
 }
 
 blockquote {
-    background-color: #ff0000;
+    border-radius: 4px;
+    border-left: 4px solid var(--on-surface-variant);
+    background-color: color-mix(in srgb, var(--surface-variant) 30%, transparent 70%);
+    padding: 4px 16px;
+    margin: 1em 0;
 }
 
 .coin-address {
@@ -181,8 +185,7 @@ main {
     width: 100%;
     box-sizing: border-box;
     overflow-wrap: break-word;
-    /* This is for the navbar */
-    padding-top: 64px;
+    padding-top: var(--navbar-height);
     flex: 1 0 auto;
 }
 
@@ -191,7 +194,7 @@ ul ul {
 }
 
 footer {
-    padding: 0.5em 1em;
+    padding: 1em 1em;
     text-align: center;
     overflow-wrap: break-word;
     background: var(--surface-container);
@@ -222,6 +225,7 @@ footer a, footer a:visited {
     align-items: center;
     list-style: none;
     justify-self: start;
+    margin: 0;
 }
 
 #pfp-layout li {
@@ -231,6 +235,7 @@ footer a, footer a:visited {
 
 .footer-row {
     justify-self: center;
+    margin: 0;
 }
 
 .footer-row li {
@@ -241,6 +246,7 @@ footer a, footer a:visited {
 .footer-column {
     justify-self: end;
     text-align: left;
+    margin: 0;
 }
 
 .footer-column li {
@@ -248,12 +254,52 @@ footer a, footer a:visited {
     padding: 0 0.5em;
 }
 
-#site-menu {
+@media (max-width: 990px) {
+    #footer-columns {
+        grid-template-columns: 1fr;
+    }
+
+    #pfp-layout {
+        flex-direction: column;
+        justify-self: center;
+        align-items: center;
+    }
+
+    #pfp-layout li {
+        justify-self: center;
+    }
+
+    .footer-row li,
+    .footer-column li {
+        display: block;
+        text-align: center;
+    }
+
+    .footer-row,
+    .footer-column {
+        justify-self: center;
+        text-align: center;
+    }
+}
+
+#navbar-content-hider {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: var(--surface);
+    margin-left: var(--spacing-regular);
+    margin-right: var(--spacing-regular);
+    height: calc(var(--navbar-height) / 2 + var(--spacing-regular));
+}
+
+#navbar {
     position: fixed;
     top: 0;
     right: 0;
     left: 0;
     list-style: none;
+    height: var(--navbar-height);
     background-color: var(--surface-container);
     white-space: nowrap;
     margin: var(--spacing-regular);
@@ -261,56 +307,48 @@ footer a, footer a:visited {
     filter: drop-shadow(0 0 6px var(--shadow));
 }
 
-#site-menu ul {
+#navbar ul {
     display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 100fr);
     padding: 0;
     margin: 0;
     list-style: none;
-    text-align: center;
 }
 
-#site-menu li {
-    text-align: center;
-}
-
-#site-menu ul li {
-    list-style-type: none;
-    display: flex;
+#navbar ul li {
     border-radius: var(--radius-full);
 }
 
-#site-menu ul li:hover {
+#navbar ul li:hover {
     background-color: var(--surface-container-high);
 }
 
-#site-menu ul li[aria-current] {
+#navbar ul li[aria-current] {
     background-color: var(--secondary-container);
 }
 
-#site-menu ul li[aria-current]:hover {
+#navbar ul li[aria-current]:hover {
     background-color: var(--secondary-container);
 }
 
-#site-menu ul li a {
-    color: var(--on-surface)
+#navbar ul li a {
+    color: var(--on-surface-variant);
+    height: var(--navbar-height);
     display: flex;
+    align-items: center;
     text-decoration: none;
-    padding: 1em;
     justify-content: center;
-    width: 100%;
 }
 
-#site-menu ul li a:visited {
+#navbar ul li a:visited {
+    color: var(--on-surface-variant);
+}
+
+#navbar ul li[aria-current] a {
     color: var(--on-secondary-container);
 }
 
-#site-menu ul li[aria-current] a {
-    color: var(--on-secondary-container);
-}
-
-#site-menu ul li[aria-current]:hover a {
+#navbar ul li[aria-current]:hover a {
     color: var(--on-secondary-container);
 }
 
@@ -567,7 +605,6 @@ details[open] summary {
     fill: #f0883e;
 }
 
-/* latin */
 @font-face {
     font-family: Noto;
     font-style: normal;
@@ -576,7 +613,6 @@ details[open] summary {
     src: local("Noto"), local("NotoSans-Regular"), url("/assets/fonts/NotoSans-Regular.ttf") format("ttf");
 }
 
-/* latin */
 @font-face {
     font-family: Noto;
     font-style: italic;
@@ -585,7 +621,6 @@ details[open] summary {
     src: local("Noto Italic"), local("NotoSans-Italic"), url("/assets/fonts/NotoSans-Italic.ttf") format("woff2");
 }
 
-/* latin */
 @font-face {
     font-family: Noto;
     font-style: normal;
@@ -594,7 +629,6 @@ details[open] summary {
     src: local("Noto Bold"), local("Noto-Bold"), url("/assets/fonts/NotoSans-Bold.ttf") format("ttf");
 }
 
-/* latin */
 @font-face {
     font-family: "Noto Mono";
     font-style: normal;
